apps/k8s/base/gateway/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: observability
spec:
  parentRefs:
  - name: public-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prometheus
    backendRefs:
    - name: monitoring-kube-prometheus-prometheus
      port: 9090
